feat(skills): add archive-size-preflight-and-extract skill + BeanShell JDK 21 defect ref
- New skill: archive-size-preflight-and-extract with pre-flight report and verified extraction scripts

- eclipse-pde-jdk-migration: add BeanShell AbstractStringBuilder.append Phase 4 table row

- folder-comparison: cross-ref archive-size-preflight-and-extract as upstream producer

- large-text-file-stream-split: cross-ref archive-size-preflight-and-extract as sibling

- AGENTS.md: register new skill + update eclipse-pde-jdk-migration description